Fix spacing for iPhone size

--- a/css/style.css
+++ b/css/style.css
@@ -337,21 +337,23 @@ blockquote small {
 
 @media (max-width: 767px) {
   #home h1 {
-    margin-bottom: 2px;
     font-size: 26px;
     text-align: center;
+    padding-bottom: 0;
+    margin-bottom: 0;
   }
   #home h2 {
     font-size: 20px;
     text-align: center;
-    margin-bottom: 20px;
+    padding-top: 0;
+    margin-bottom: 10px;
   }
   #home .lead{
     font-size: 16px;
     text-align: center;
   }
   .quote-fader {
-    min-height: 100px;
+    min-height: 120px;
   }
 }
 
